--- a/package.json
+++ b/package.json
@@ -7,4 +7,12 @@
   "engines": {
     "node": ">=20.0.0"
   },
+  "dependencies": {
+    "@remix-run/node": "^2.15.1",
+    "@remix-run/react": "^2.15.1",
+    "@remix-run/serve": "^2.15.1",
+    "isbot": "^4.4.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  }
 }
