--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "private": true,
   "sideEffects": false,
   "type": "module",
-  "scripts": {},
+  "scripts": {
+    "build": "remix vite:build",
+    "dev": "remix vite:dev",
+    "start": "remix-serve ./build/server/index.js"
+  },
   "engines": {
     "node": ">=20.0.0"
   },
@@ -14,5 +18,9 @@
     "isbot": "^4.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "@remix-run/dev": "^2.15.1",
+    "vite": "^5.4.11"
   }
 }
