--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
-  "name": "from-scratch",
-  "private": true,
-  "sideEffects": false,
-  "type": "module",
-  "scripts": {
-    "build": "remix vite:build",
-    "dev": "remix vite:dev",
-    "start": "remix-serve ./build/server/index.js"
-  },
-  "engines": {
-    "node": ">=20.0.0"
-  },
-  "dependencies": {
-    "@remix-run/node": "^2.15.1",
-    "@remix-run/react": "^2.15.1",
-    "@remix-run/serve": "^2.15.1",
-    "isbot": "^4.4.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
-  "devDependencies": {
-    "@remix-run/dev": "^2.15.1",
-    "vite": "^5.4.11"
-  }
+    "name": "from-scratch",
+    "private": true,
+    "sideEffects": false,
+    "type": "module",
+    "scripts": {
+        "build": "remix vite:build",
+        "dev": "remix vite:dev",
+        "start": "remix-serve ./build/server/index.js",
+        "typecheck": "tsc --noEmit"
+    },
+    "engines": {
+        "node": ">=20.0.0"
+    },
+    "dependencies": {
+        "@remix-run/node": "^2.15.1",
+        "@remix-run/react": "^2.15.1",
+        "@remix-run/serve": "^2.15.1",
+        "isbot": "^4.4.0",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0"
+    },
+    "devDependencies": {
+        "@remix-run/dev": "^2.15.1",
+        "@types/react": "^19.0.2",
+        "@types/react-dom": "^19.0.2",
+        "typescript": "^5.7.2",
+        "vite": "^5.4.11",
+        "vite-tsconfig-paths": "^5.1.4"
+    }
 }
