--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
         "@remix-run/dev": "^2.15.1",
         "@types/react": "^19.0.2",
         "@types/react-dom": "^19.0.2",
+        "autoprefixer": "^10.4.20",
+        "postcss": "^8.4.49",
+        "tailwindcss": "^3.4.17",
         "typescript": "^5.7.2",
         "vite": "^5.4.11",
         "vite-tsconfig-paths": "^5.1.4"
