--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "scripts": {
         "build": "remix vite:build",
         "dev": "remix vite:dev",
+        "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+        "lint:fix": "eslint --fix --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
         "start": "remix-serve ./build/server/index.js",
         "typecheck": "tsc --noEmit"
     },
@@ -24,10 +26,18 @@
         "@remix-run/dev": "^2.15.1",
         "@types/react": "^19.0.2",
         "@types/react-dom": "^19.0.2",
+        "@typescript-eslint/eslint-plugin": "^6.7.4",
+        "@typescript-eslint/parser": "^6.7.4",
         "autoprefixer": "^10.4.20",
+        "eslint": "8.38.0",
+        "eslint-import-resolver-typescript": "^3.6.1",
+        "eslint-plugin-import": "^2.28.1",
+        "eslint-plugin-jsx-a11y": "^6.7.1",
+        "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
         "postcss": "^8.4.49",
         "tailwindcss": "^3.4.17",
-        "typescript": "^5.7.2",
+        "typescript": "^5.3.0",
         "vite": "^5.4.11",
         "vite-tsconfig-paths": "^5.1.4"
     }
